--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
           <a class="navbar-brand" href="#">i-59 Progate Team Project</a>
 
         </div>
+        <a href="#" class="menu-icon">
+          <span class="fa fa-bars"></span>
+        </a>
+
         <div class="header-right">
           <a href="#">Home</a>
           <a href="#">Project</a>
@@ -31,7 +35,10 @@
           <a href="#">Contact</a>
 
         </div>
+
       </div>
+
+
     </header>
      <div class="top-wrapper">
       <div class="container">
@@ -125,7 +132,7 @@
         <div class="container">
           <div class="col-md-12">
             <h5 class="text-center">
-            <span style="color: white">All Right Reserved</span> <span style="color: #e74c3c">Copyright 2020</span><span style="color: white"> / ProjetI5 </span>
+            <span style="color: white">All Right Reserved</span> <span style="color: #e74c3c">Copyright 2020</span><span style="color: white"> / Project i-59 </span>
           </h5>
           </div><!-- col -->
         </div><!-- container -->
